## Change log

### 1.1.1 (in development)
* Fix - Added in a function to filters downloads that do not exist.

### 1.1 - October 23 2019
* Fix - Day Ordering
* Fix - HTML not displaying on Workouts
* Fix - Updated placeholder text in fields on profile #10 & #9
* Fix - Video modal not closing on mobile devices #13
* Fix - Tips images distorting
* Dev - Added drag-able Days in the back-end to re-order them #16

### 1.0.5 - In Development
* Fix - Placeholder for Waist changed to cm on Edit Account Page.
* Fix - Added a space between the value to make it neater and also change the Kg's to kg on my account page.

### 1.0.4 - 13 September 2019
* Fix - Downloads box will not have duplicated links
* Fix - Removing the display non for the EFT page
* Fix - Added in Fix for Recipe details on Mobile View
* Dev - Activating github actions.

### 1.0.3
* Dev - Removed Peach Payments and added in Payfast on Checkout
* Fix - Removed unnecessary link on Tips

### 1.0.2
* Dev - Changing icons to be inline svgs.
* Fix - Fixing the week view order to be by date.
* Fix - Recipes and shopping list box only appear if they are not empty on the Meal Plan Tab

### 1.0.1
* Fix - Style fixes and improvements on desktop and mobile.

### 1.0
* Initial release